<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rulesViewModel"
            type="com.example.nhie.rules.RulesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/fragment_rules_txt_back"
            style="@style/SystemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_btn_back_start"
            android:layout_marginTop="@dimen/margin_btn_back_top"
            android:onClick="@{() -> rulesViewModel.onBackNavigate()}"
            android:text="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_rules_txt_rules_header"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_fragment_rules_views_start_end"
            android:layout_marginTop="@dimen/margin_from_btn_back_top"
            android:text="@string/rulesscreen_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_rules_txt_back" />

        <TextView
            android:id="@+id/fragment_rules_txt_rules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_fragment_rules_views_start_end"
            android:layout_marginEnd="@dimen/margin_fragment_rules_views_start_end"
            android:text="@string/rulesscreen_rules"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_fragment_rules_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_rules_txt_rules_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>